src/Beastiepedia/Sidebar.module.css
.sidebar {
  float: left;
  width: 23%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

.sidebaroff {
  composes: sidebar;
  display: none;
}

.sidebarsearchcon {
  composes: animBoxBackground from global;
  position: sticky;
  top: 1px;
  margin-top: 5px;
  z-index: 1;
  padding: 5px 5px 5px 5px;
  width: 86%;
  height: 22px;
  margin-left: 5%;
  display: flex;
  clip-path: polygon(0 0, calc(100% - 2px) 0, 100% 100%, 2px 100%);
}

.sidebarsearch {
  flex-grow: 1;
}

.gridimage {
  filter: invert(1);
  height: 100%;
  margin-left: 2px;
  padding: 0 2px 0 2px;
  aspect-ratio: 1;
  background-image: url("/gameassets/sprOptions_small_0.png");
  background-size: 100% 100%;
  transform: scaleX(-1);
}

.gridimageGrid {
  composes: gridimage;
  background-size: 25% 100%;
}

.beastiecontainer {
  display: flex;
  width: 100%;
  flex-direction: column;
}

.beastiecontainergrid {
  composes: beastiecontainer;
  flex-direction: row;
  flex-wrap: wrap;
  min-width: min(100%, 480px);
  width: 100%; /* if round not supported */
  width: round(down, 100%, 120px);
  margin: 0 auto;
}

.beastie {
  margin-top: 6px;
  width: 100%;
  height: 106px;
  cursor: pointer;
  position: relative;
  text-decoration: none;
}

.beastiecontainergrid > .beastie {
  max-width: 25%;
  width: 120px;
  height: fit-content;
}

.beastiecontainergrid > .beastie > .beastiecontent {
  clip-path: polygon(0 0, 95% 1%, 100% 100%, 5% 99%);
}

.beastiecontainergrid > .beastie > .beastiecontent > .image {
  margin: 5%;
  width: 95%;
  height: 95%;
}

.beastiecontainergrid > .beastie > .beastiecontent > .gridnumber {
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 0 6px 0 6px;
  font-family: SportsJersey, "Go Banana", sans-serif;
  color: white;
  clip-path: polygon(0 0, 0 100%, 100% 100%, calc(100% - 4px) 0);
  box-sizing: border-box;
  z-index: 1;
}

.gridnumberright {
  composes: gridnumber;
  composes: boxHeaderBackground from global;
  left: auto !important;
  right: 0 !important;
  clip-path: polygon(0 0, 4px 100%, 100% 100%, 100% 0) !important;
  font-size: 0.9em;
  z-index: 0 !important;
}

.gridnumberrightsmall {
  composes: gridnumberright;
  font-size: 0.8em;
}

.beastiecontainergrid > .beastie > .beastiecontent > .name {
  display: none;
}

.beastie:last-child {
  margin-bottom: 10px;
}

.beastiecontent {
  composes: animSelectableBackground from global;
  width: 96%;
  padding-left: 2%;
  clip-path: polygon(0 0, 98% 1%, 100% 100%, 2% 99%);
  height: 100%;
  color: black;
  display: flex;
  align-items: center;
}

.selected {
  composes: animSelectedBackground from global;
}

.image {
  aspect-ratio: 1;
  height: 95%;
}

.gridnumber {
  composes: boxHeaderBackground from global;
  display: none;
}

.name {
  width: 67%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 2em;
}

.number {
  font-family: SportsJersey, sans-serif;
}

.hash {
  font-weight: 800;
  font-size: 0.8em;
}

@media all and (max-aspect-ratio: 1/1) {
  .sidebar {
    width: 100%;
  }

  .sidebarsearch {
    width: 98.5%;
  }

  .name {
    font-size: 2.3em;
  }

  .beastie:last-child {
    margin-bottom: 60px;
  }
}

